--- a/source/public/scss/sections/_main.scss
+++ b/source/public/scss/sections/_main.scss
@@ -8,7 +8,8 @@ main{
 
   @import "../sections/main/about";
   @import "../sections/main/skills";
-
+  @import "../sections/main/projects";
+  @import "../sections/main/contact";
 
 
 }
