--- a/source/public/scss/partials/_mixins.scss
+++ b/source/public/scss/partials/_mixins.scss
@@ -39,6 +39,12 @@
   }
 }
 
+@mixin tablet-portrait{
+  @include breakpoint(($tablet) (orientation portrait)){
+    @content
+  }
+}
+
 @mixin hr-custom($color){
   width: 100%;
   height: 5px;
@@ -60,6 +66,12 @@
     }
   }
 
+  @include breakpoint($tablet) {
+    h2 {
+      font-size: 4vw;
+    }
+  }
+
   @include breakpoint($desktop) {
     h2 {
       font-size: 2.5vw;
@@ -69,28 +81,16 @@
 
 @mixin main-section-h3{
   h3 {
-    font-size: 4vw;
+    font-size: 15px;
     margin-bottom: 0;
     margin-top: 10px;
     font-weight: 100;
     font-family: $roboto-font;
-  }
 
-  @include mobile-landscape {
-    h3 {
-      font-size: 2.5vw;
+    @include mobile-landscape{
+      font-size: 18px;
     }
   }
 
-  @include tablet-landscape {
-    h3 {
-      font-size: 2.2vw;
-    }
-  }
 
-  @include breakpoint($desktop) {
-    h3 {
-      font-size: 1.5vw;
-    }
-  }
 }
