--- a/source/public/scss/sections/main/_skills.scss
+++ b/source/public/scss/sections/main/_skills.scss
@@ -34,6 +34,7 @@ hr.hr-skills{
 
     @include container;
     padding-bottom: 20px;
+    font-family: $roboto-font;
 
     .list-skills{
 
@@ -82,7 +83,7 @@ hr.hr-skills{
               @while $i <= 10 {
                 .bar-use-percent-#{$i} {
                   @extend .bar-use;
-                  width: (10%) * $i;
+                  width: ((10%) * $i) - 1;
                 }
                 $i: $i + 1;
               }
