Modularizing HTML with gulp-nunjucks

--- a/source/public/scss/partials/_variables.scss
+++ b/source/public/scss/partials/_variables.scss
@@ -33,11 +33,7 @@ $susy:(
         global-box-sizing: border-box
 );
 
-$section-default: (
-        gutters: 0,
-);
 
-$section-model-1: (
-        gutters: 0
-);
 
+// === CONTROLS ===
+$menu-opened: false;
