- Change Michael Silva Logo - Heart effect - Menu internals links - Change background - Header effects - About Effects - Go to top button - Header arrow working

--- a/source/public/scss/partials/_mixins.scss
+++ b/source/public/scss/partials/_mixins.scss
@@ -91,6 +91,21 @@
       font-size: 18px;
     }
   }
-
-
 }
+
+
+@mixin keyframes($name) {
+  @-webkit-keyframes #{$name} {
+    @content;
+  }
+  @-moz-keyframes #{$name} {
+    @content;
+  }
+  @-ms-keyframes #{$name} {
+    @content;
+  }
+  @keyframes #{$name} {
+    @content;
+  }
+}
+
