--- a/source/public/scss/sytles.scss
+++ b/source/public/scss/sytles.scss
@@ -19,7 +19,29 @@
 
 body {
   background-color: $page-background-color;
+  overflow-x: hidden;
+
+  .noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    mso-highlight: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    outline: none;
+  }
+
+  a{
+    color: inherit;
+    text-decoration: inherit;
+  }
 }
+
+
+
+
 
 @import "sections/header";
 @import "sections/main";
