--- a/source/public/scss/partials/_mixins.scss
+++ b/source/public/scss/partials/_mixins.scss
@@ -45,6 +45,16 @@
   }
 }
 
+@mixin more-mobile-landscape(){
+  @include mobile-landscape{
+    @content;
+  }
+
+  @include breakpoint($tablet){
+    @content
+  }
+}
+
 @mixin hr-custom($color){
   width: 100%;
   height: 5px;
@@ -79,6 +89,7 @@
   }
 }
 
+
 @mixin main-section-h3{
   h3 {
     font-size: 15px;
@@ -108,4 +119,6 @@
     @content;
   }
 }
+
+
 
