--- a/source/public/scss/sections/main/_projects.scss
+++ b/source/public/scss/sections/main/_projects.scss
@@ -48,7 +48,6 @@ hr.hr-projects{
           @include border-radius(5px);
           border: 1px solid #eae1e1;
           @include box-shadow(#cecccc 1px 1px 2px);
-          cursor: pointer;
           position: relative;
 
           img{
@@ -80,6 +79,7 @@ hr.hr-projects{
             right: 15px;
             font-size: 20px;
             color: #949393;
+            cursor: pointer;
 
             &:hover{
               color: darken(#949393, 20%)
@@ -119,6 +119,105 @@ hr.hr-projects{
             }
           }
         }
+
+
+        .project-info{
+          width: 100%;
+          height: 100%;
+          background-color: $main-primary-color;
+          position: absolute;
+          top: 0;
+          left: 0;
+          @include border-radius(5px);
+          cursor: default;
+          font-family: $roboto-font;
+          display: none;
+
+          .title{
+            font-size: 20px;
+            color: #666;
+            margin: 0;
+            padding: 10px;
+            position: relative;
+            width: 100%;
+            margin-top: 10px;
+
+            i.title-icon{
+              margin-right: 10px;
+              font-size: 30px;
+              vertical-align: middle;
+              color: $main-secondary-color;
+            }
+
+            i.project-info-close{
+              position: absolute;
+              right: 10px;
+              font-size: 25px;
+              color: #bbb;
+              top: 10px;
+              cursor: pointer;
+
+              &:hover{
+                color: darken(#bbb, 20%);
+              }
+            }
+          }
+
+          .body{
+            padding: 0 10px 10px 10px;
+
+            p{
+              color: #999;
+              line-height: 22px;
+              width: 100%;
+              font-weight: normal;
+              font-size: 15px;
+            }
+
+            ul{
+              list-style: none;
+              padding: 0;
+              margin: 0;
+              float: none;
+              width: 100%;
+
+              li{
+                clear: both;
+                float: none;
+                width: 100%;
+                color: #666;
+                margin-bottom: 10px;
+
+                .number{
+                  width: 25px;
+                  background-color: $main-secondary-color;
+                  height: 25px;
+                  @include border-radius(50%);
+                  float: left;
+                  color: #fff;
+                  text-align: center;
+                  line-height: 25px;
+                  font-size: 18px;
+                }
+
+                .task-item-text{
+                  float: left;
+                  line-height: 20px;
+                  width: calc(100% - 30px);
+                  font-size: 15px;
+                  margin-left: 5px;
+                  padding-left: 5px;
+
+                }
+
+                .clear{
+                  clear: both;
+                }
+              }
+            }
+          }
+        }
+
       }
     }
   }
