--- a/source/public/scss/sections/main/_skills.scss
+++ b/source/public/scss/sections/main/_skills.scss
@@ -36,106 +36,135 @@ hr.hr-skills{
     padding-bottom: 20px;
     font-family: $roboto-font;
 
-    .list-skills{
+    ul{
 
-      ul{
-        list-style: none;
-        width: 80%;
-        padding: 0;
-        margin: 0;
+      list-style: none;
+      width: 100%;
+      padding: 0;
+      margin: 0;
 
-        li{
-          width: 100%;
-          margin-bottom: 30px;
+      li{
+        width: 100%;
+        height: 220px;
+        margin-bottom: 30px;
 
-          .tec-icon{
-            float: left;
-            width: 50px;
-            text-align: left;
-          }
+        @include more-mobile-landscape{
+          @include span(6 of 12);
+        }
 
-          .tec-progress{
-            float: right;
-            width: 70%;
-            text-align: left;
+        @include breakpoint($desktop){
+          @include span(4 of 12);
+        }
 
-            .bar-total{
-              width: 100%;
-              background-color: $main-primary-color;
-              height: 26px;
-              margin-top: 13px;
 
-              .bar-use{
-                height: 26px;
-                background-color: #d8d0d0;
+        .content{
+
+          width: 95%;
+
+          .img-group{
+            height: 100px;
+            text-align: center;
+            line-height: 120px;
+            vertical-align: middle;
+
+            i{
+              line-height: 120px;
+              color: $main-primary-color;
+              font-size: 15vw;
+
+              @include more-mobile-landscape{
+                font-size: 7vw;
               }
 
-              .bar-use-number{
-                background-color: #b4b0b0;
-                line-height: 26px;
-                width: 30px;
-                color: #fff;
-                text-align: center;
-                float: right;
+              @include breakpoint($desktop){
+                font-size: 5vw;
+              }
+            }
+
+            img{
+              max-width: 15vw;
+              margin-left: 5px;
+
+              @include more-mobile-landscape{
+                max-width: 7vw;
               }
 
-              $i: 0;
-              @while $i <= 10 {
-                .bar-use-percent-#{$i} {
-                  @extend .bar-use;
-                  width: ((10%) * $i) - 1;
-                }
-                $i: $i + 1;
+              @include breakpoint($desktop){
+                max-width: 5vw;
               }
 
+              &:first-child{
+                margin-left: 0;
+              }
             }
           }
 
-          p{
-            text-align: left;
-            width: 100%;
-            clear: both;
-            color: $main-primary-color;
-            font-size: 18px;
-            padding-top: 3px;
+          .text{
+            height: 100px;
+            margin-top: 20px;
+            text-align: center;
+            color: #fff;
+            font-size: 16px;
+            font-weight: 300;
+            padding: 0 7px 7px 7px;
+          }
+
+
+        }
+
+
+      }
+
+      li:nth-child(even){
+
+        .content{
+          background-color: rgba(#000,0.04);
+          margin: 0 auto;
+        }
+        @include mobile-landscape{
+          .content{
+            margin: 0 0 auto auto;
           }
         }
       }
-    }
 
-    .list-skills-1{
-      @extend .list-skills;
-      @include breakpoint($tablet) {
-        @include span(6 of 12 first);
-        border-right: 2px solid rgba(255, 255, 255, 0.3);
-      }
+      li:nth-child(odd){
+        .content{
+          background-color: darken($main-secondary-color, 5%);
+          margin: 0 auto;
+        }
 
-      @include mobile-landscape{
-        @include span(6 of 12 first);
-        border-right: 2px solid rgba(255, 255, 255, 0.3);
-      }
-    }
-
-    .list-skills-2{
-
-      @extend .list-skills;
-
-      @include breakpoint($tablet) {
-        @include span(6 of 12 first);
-        ul{
-          float: right;
+        @include mobile-landscape{
+          .content{
+            margin: auto auto 0 0;
+          }
         }
       }
 
-      @include mobile-landscape{
-        @include span(6 of 12 first);
-        ul{
-          float: right;
+      li:nth-of-type(4n){
+        @include breakpoint($desktop){
+          .content{
+            margin-left: 0;
+          }
+        }
+      }
+
+      li:nth-of-type(3n){
+        @include breakpoint($desktop){
+          .content{
+            margin: auto 0 auto auto;
+          }
+        }
+      }
+
+      li:nth-of-type(3n + 2){
+        @include breakpoint($desktop){
+          .content{
+            margin: auto;
+          }
         }
       }
 
     }
-
-
   }
 }
