- Change color when select the texts. - Change link styles; - Add mailto in footer user;

--- a/source/public/scss/partials/_mixins.scss
+++ b/source/public/scss/partials/_mixins.scss
@@ -120,5 +120,14 @@
   }
 }
 
+@mixin selection($background, $color){
+  ::selection{
+    background-color: $background;
+    color: $color;
+  }
 
-
+  ::-moz-selection{
+    background-color: $background;
+    color: $color;
+  }
+}
