-Add jquery gallery to projects

--- a/src/public/scss/sytles.scss
+++ b/src/public/scss/sytles.scss
@@ -54,6 +54,20 @@ body {
     }
   }
 
+  .lg-outer .lg-item {
+    background: url("../../dist/images/loading.gif") no-repeat scroll center center transparent !important;
+    display: none !important;
+  }
+
+  .lightgallery{
+    a{
+      display: none;
+    }
+
+    a.cover{
+      display: inline;
+    }
+  }
 }
 
 
