--- a/src/public/scss/sections/main/_skills.scss
+++ b/src/public/scss/sections/main/_skills.scss
@@ -68,8 +68,9 @@ hr.hr-skills{
           .img-group{
             height: 100px;
             text-align: center;
-            line-height: 120px;
+            line-height: 130px;
             vertical-align: middle;
+            padding-top: 20px;
 
             i{
               line-height: 120px;
@@ -105,7 +106,6 @@ hr.hr-skills{
 
           .text{
             height: 100px;
-            margin-top: 20px;
             text-align: center;
             color: #fff;
             font-size: 16px;
