Revert "Text of finished page."
This reverts commit 07411a74ed0b61e15257c34b664de6a52f130b2a.

--- a/src/public/scss/sections/main/_skills.scss
+++ b/src/public/scss/sections/main/_skills.scss
@@ -68,9 +68,8 @@ hr.hr-skills{
           .img-group{
             height: 100px;
             text-align: center;
-            line-height: 130px;
+            line-height: 120px;
             vertical-align: middle;
-            padding-top: 20px;
 
             i{
               line-height: 120px;
@@ -106,6 +105,7 @@ hr.hr-skills{
 
           .text{
             height: 100px;
+            margin-top: 20px;
             text-align: center;
             color: #fff;
             font-size: 16px;
